Fix top bar sizing on smaller screens.

--- a/style.css
+++ b/style.css
@@ -202,6 +202,12 @@ main {
     .banner {
         font-size: 13px;
     }
+
+    th, td {
+        padding-left: 32px;
+        padding-right: 32px;
+        vertical-align: middle;
+    }
 }
 
 .mediaflex {
